# mediapipe-lab

./: README.md
gesture_detector/: pyproject.toml
gesture_detector/src/gesture_detector/: main.py
