[project]
name = "gesture-detector"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python (<4.12)",
    "mediapipe (>=0.10.21,<0.11.0)",
]

[tool.poetry]
packages = [{include = "gesture_detector", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
